--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "lint": "eslint --fix --ext \".js,.vue\" --ignore-path .gitignore ."
   },
   "dependencies": {
+    "vue-chartjs": "^4.1.2",
+    "chart.js": "^3.9.1",
     "@ckeditor/ckeditor5-build-classic": "^35.3.2",
     "@ckeditor/ckeditor5-vue2": "^3.0.1",
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.25.3",
+    "moment": "^2.30.1",
     "nuxt": "^2.15.8",
     "uuid": "^9.0.1",
     "vue": "^2.7.10",
